<resources>
    <string name="app_name">Retrofit Rss Demo</string>
    <string name="favorites_label">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_search">Search</string>
    <string name="action_tabs">TabLayoutTest</string>


    <string name="menu_browser">Open in browser</string>
    <string name="search_hint">Search favorites</string>
    <string name="bill_title">Bill Title</string>
    <string name="publication_date">Publication Date</string>
    <string name="bill_description">Bill Description</string>

    <string name="dialog_save">Add to favorites</string>
    <string name="dialog_unsave">Remove from favorites</string>
    <string name="dialog_favorites_delete">Delete from favorites</string>
    <string name="empty_list_message">No Recent Bill Activity</string>
    <string name="empty_favorites_message">No saved items</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="settings">Settings</string>
    <string name="expand_pref">Expand all cards</string>
    <string name="collapse_pref">Collapse all cards</string>
    <string name="prefTitle">Display</string>
    <string name="preference_test">Preference Test</string>
    <string name="dummy_pref_title">Dummy Preference</string>
    <string name="dummy_pref_summary">I don\'t do anything!</string>
    <string name="pref_header_dummy_title">Dummy Header Title</string>
    <string name="pref_header_dummy_summary">This is a summary of my Dummy Header Settings</string>
    <string name="card_color_summary">Change the color of cards in the RSS feed</string>
    <string name="pref_color_dialog_title">Pick a color</string>

</resources>
