<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.example.josh.retrofitrssdemo.SettingsActivity$SettingsFragmentOne"
        android:summary="@string/prefTitle"
        android:title="@string/prefTitle">
        <extra android:name="settings" android:value="someHeaderValue" />
    </header>


    <header
        android:fragment="com.example.josh.retrofitrssdemo.SettingsActivity$SettingsFragmentTwo"
        android:title="@string/pref_header_dummy_title"
        android:summary="@string/pref_header_dummy_summary">
        <!-- key/value pairs can be included as arguments for the fragment. -->
        <extra android:name="settings" android:value="someHeaderValueTwo" />
    </header>

</preference-headers>