<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground"
    xmlns:card_view="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="2dp"
        app:cardBackgroundColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bill_fav_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="6dp"
                android:text="@string/bill_title"
                android:textSize="24sp"
                android:textColor="@color/md_indigo_700"/>

            <TextView
                android:id="@+id/bill_fav_pubdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bill_fav_title"
                android:layout_alignParentRight="true"
                android:paddingTop="6dp"
                android:paddingBottom="4dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:text="@string/publication_date"
                android:textSize="14sp"
                android:textColor="@color/md_black_1000"/>

            <View
                android:layout_below="@+id/bill_fav_pubdate"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/textview_divider"/>

            <TextView
                android:id="@+id/bill_fav_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bill_fav_pubdate"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:textSize="14sp"
                android:text="@string/bill_description"
                android:textColor="@color/md_black_1000"/>

            <ImageButton
                android:id="@+id/fav_trash_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@+id/bill_fav_description"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@+id/fav_share_button"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_delete_black_24dp"
                android:tint="@color/colorPrimary"/>

            <ImageButton
                android:id="@+id/fav_share_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/bill_fav_description"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_share"
                android:tint="@color/md_pink_A200"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>